fixed alignment, added project

--- a/smooshss.css
+++ b/smooshss.css
@@ -7,14 +7,13 @@ h1{
     font-weight: bold;
     left: 0;
     margin: 0 0 auto;
-    position: absolute;
+    position:absolute;
     top: 50%;
     width: 100%;
 }
 
 h2{
     left:0;
-    top: 50%;
     width: 100%;
     margin: 0 0 auto;
     position: absolute;
@@ -22,24 +21,23 @@ h2{
 
 #header{
     color: #F75959;
-    background-color:#d0e4e5;
-    position:absolute;
+    background-color:#fdf9f0;
+    position:relative;
     width: 100%;
     min-height: 100vh;
-    position:absolute;
     left:0;
     top:0;
     text-align: center;
     margin-bottom:0.5em;
-    float: left;
 }
 
 #projectheader{
     width: 100%;
-    margin-top: 100px;
+    margin-top: 10px;
     margin-bottom: 32px;
     text-align: center;
-    padding-top: 100px;
+    padding-top: 10px;
+    position: relative;
 }
 
 body{
